fixing titles and movies card to center align

--- a/src/components/LeftContainer.css
+++ b/src/components/LeftContainer.css
@@ -55,6 +55,9 @@ body {
 .left-title {
   font-size: 2.8em !important;
 }
+.title {
+  text-align: center;
+}
 .left-container li,
 .title {
   font-family: "Booter - Zero Zero";
@@ -74,6 +77,7 @@ body {
   cursor: pointer;
 }
 .card-container {
+  text-align: center;
 }
 .right-container {
   /* border: 0.1rem solid #333; */
